FINT-52 FINT-46 #comment Change to more flexible error handler inner type